# whistle_bindgen

./: .gitignore  Cargo.toml  README.md  cli.ts  deno.json  lib.rs  lib.ts  mod.ts  rustfmt.toml  test.ts  wasm.js  whistle_bindgen.ts
examples/: exit.ts  exit.whi
pkg/: package.json  whistle_deno.d.ts  whistle_deno.js  whistle_deno_bg.wasm  whistle_deno_bg.wasm.d.ts
scripts/: build.ts
